--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet">
     <!-- Animate Css -->
     <link rel="stylesheet" href="css/animate-3.5.1.css">
     <!-- Bootstrap CSS -->
@@ -54,11 +57,127 @@
             </div>
         </div>
     </section><!-- navegation-top -->
-    
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <section class="main-m">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <div class="card-holytrails">
+                        <!-- <i class="fas fa-chevron-down d-none d-sm-block"></i> -->
+                        <i class="fas fa-chevron-down"></i>
+                        <div class="card-holytrails-top d-sm-flex justify-content-between">
+                            <div class="card-holytrails-left text-center text-sm-left">
+                                <em>cusco</em>
+                                <h2>rocky mountain singletrack</h2>
+                                <strong>skill: <span>advanced 7/9</span></strong>
+                            </div>
+                            <div class="card-holytrails-right d-flex justify-content-between d-sm-block text-center">
+                                <div>
+                                    <h2>8 days</h2>
+                                    <strong> SEPT - OCT </strong>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <a href="#" class="btn-card">more info</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-holytrails-bottom">
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
+    <br>
+    <section class="main-title">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="title d-flex flex-column justify-content-center align-items-center">
+                        <h2>TIPOGRAFÍA PARA TÍTULOS</h2>
+                        <span>tipografía para subtitulos</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
+    <br>
+    <section class="main-title title-secondary">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="title d-flex flex-column justify-content-center align-items-center">
+                        <h2>TIPOGRAFÍA PARA TÍTULOS</h2>
+                        <span>tipografía para subtitulos</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
+    <br>
+    <section class="main-title title-terteary">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="title d-flex flex-column justify-content-center align-items-center">
+                        <h2>TIPOGRAFÍA PARA TÍTULOS</h2>
+                        <span>tipografía para subtitulos</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
+    <br>
+    <section class="main-tabs">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="nav nav-pills">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="pill" href="#home">tab activo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="pill" href="#menu1">Item 2</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="pill" href="#menu2">Item 3</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div class="tab-pane container active" id="home">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores deserunt blanditiis, ipsam adipisci eos at aperiam suscipit fuga quos perspiciatis distinctio, laborum omnis officia architecto? Alias tenetur nam nesciunt dicta!
+                        Accusantium alias officiis fugiat voluptas modi eaque repellat. Sit saepe, maxime blanditiis accusantium explicabo delectus dignissimos ipsa rem veritatis labore optio culpa nobis, tempore excepturi sequi velit, ad inventore debitis?
+                        Delectus non aliquam, a alias laboriosam dolore nobis ipsa nam culpa quos aspernatur, fuga ab reiciendis nostrum ea, animi quis magni deserunt recusandae atque velit nisi. Vitae officia quasi sapiente.</div>
+                        <div class="tab-pane container fade" id="menu1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, corrupti voluptate? Ipsam omnis dolorem deleniti nam, incidunt excepturi. Maxime obcaecati iusto illum vitae nemo, numquam optio laborum ad aliquam perferendis!
+                        Consequatur deleniti dolor officiis explicabo adipisci. Sed nam numquam iure enim! Rem minima quas id molestias deserunt vitae ut quam, qui cupiditate. Ex nemo eaque harum hic voluptatem excepturi quae?
+                        Quos voluptates ad ut magni officiis unde consequatur ullam voluptatibus asperiores? Possimus facere vero non eum beatae dolorem nemo maxime illo, deleniti hic perspiciatis eligendi modi cupiditate iure cumque reiciendis!
+                        Ad quidem sed totam dolore fuga architecto ut reprehenderit porro optio ea, doloremque esse alias qui animi quos quam voluptatum ipsa corporis. Tenetur incidunt eum, perspiciatis rerum maiores quos vitae.
+                        Quas eveniet enim rerum minus tenetur facilis. Obcaecati eum asperiores dolorem cum a quae qui esse voluptate. Facere numquam quibusdam neque officia eius magni, corporis beatae deleniti accusantium! Saepe, laborum.</div>
+                        <div class="tab-pane container fade" id="menu2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero eum natus nostrum numquam? Aspernatur adipisci qui temporibus molestias similique nostrum est facilis voluptate in asperiores, quibusdam consequatur suscipit deserunt odit!
+                        Minus, iure mollitia adipisci praesentium fuga omnis, similique officiis veniam quia minima ab atque facere numquam. Atque, quos ab, vero repellendus eos optio natus mollitia ullam, cupiditate iusto iste laboriosam!
+                        Sed totam blanditiis minima mollitia culpa? Quo totam mollitia nam voluptas distinctio facere quidem delectus odit et nisi necessitatibus asperiores libero consequatur, inventore molestiae eligendi magnam temporibus deserunt quam ut!
+                        Obcaecati praesentium, porro veniam harum libero, dicta vel molestias magnam odio soluta dolorem dolores impedit voluptas! Asperiores quis esse, aspernatur quae ipsam maxime pariatur est ipsa expedita! Alias, earum reiciendis?</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- jQuery -->
     <script src="js/jquery-3.3.1.min.js" ></script>
+    <!-- Fontawesome-->
+    <script src="https://kit.fontawesome.com/4e8c731652.js"></script>
+    <!-- Popper -->
     <script src="js/popper-1.14.3.min.js"></script>
+    <!-- Bootstrap -->
     <script src="js/bootstrap-4.1.3.min.js"></script>
     <!-- Script -->
     <script src="js/app.js"></script>
